--- a/TrashPickup/TrashPickup/Views/Account/Register.cshtml
+++ b/TrashPickup/TrashPickup/Views/Account/Register.cshtml
@@ -35,6 +35,12 @@
             @Html.TextBoxFor(m => m.StreetAddress, new { @class = "form-control" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.City, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
+        </div>
+    </div>
 
 
     <div class="form-group">
