--- a/TrashPickup/TrashPickup/Views/Shared/_LoginPartial.cshtml
+++ b/TrashPickup/TrashPickup/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,7 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Customer Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Employee Log in", "Index", "Worker", routeValues: null, htmlAttributes: new { id = "workerLink" })</li>
     </ul>
 }
