Changed register page

--- a/TrashPickup/TrashPickup/Views/Account/Login.cshtml
+++ b/TrashPickup/TrashPickup/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using TrashPickup.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Customer Login";
+    ViewBag.Title = "Login";
 }
 
 <h2>@ViewBag.Title</h2>
