--- a/TrashPickup/TrashPickup/Views/Account/Register.cshtml
+++ b/TrashPickup/TrashPickup/Views/Account/Register.cshtml
@@ -9,6 +9,7 @@
 {
     @Html.AntiForgeryToken()
     <h4>Sign up for trash pickup</h4>
+    <h5>If you are an employee, please check your e-mail for your login information.</h5>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
