--- a/TrashPickup/TrashPickup/Views/Worker/WorkerHome.cshtml
+++ b/TrashPickup/TrashPickup/Views/Worker/WorkerHome.cshtml
@@ -11,14 +11,14 @@
     <div class="col-md-6">
         <h2>Today's Schedule</h2>
         <p>
-            See which customers are scheduled for a pick up today.
+            See which customers are scheduled for a pickup today.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("View Customers", "CustomerSchedule")</p>
     </div>
     <div class="col-md-6">
         <h2>Map</h2>
-        <p>View your pick ups on a map.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>View your pickups on a map.</p>
+        <p>@Html.ActionLink("View Map", "WorkerMap")</p>
     </div>
 
 </div>
