--- a/TrashPickup/TrashPickup/Views/Worker/WorkerHome.cshtml
+++ b/TrashPickup/TrashPickup/Views/Worker/WorkerHome.cshtml
@@ -13,7 +13,7 @@
         <p>
             See which customers are scheduled for a pickup today.
         </p>
-        <p>@Html.ActionLink("View Customers", "CustomerSchedule")</p>
+        <p>@Html.ActionLink("View Customers", "WorkerSchedule")</p>
     </div>
     <div class="col-md-6">
         <h2>Map</h2>
